remove packages and install some others

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -6,10 +6,10 @@ source = ~/.config/hypr/monitors.conf
 # Default applications
 $terminal = alacritty
 $fileManager = nautilus --new-window
-$browser = chromium --new-window --ozone-platform=wayland
+$browser = firefox
 $music = spotify
 #$passwordManager = 
-$messenger = signal-desktop
+$messenger = telegram-desktop
 $webapp = $browser --app
 
 # Use defaults Omarchy defaults
@@ -28,15 +28,8 @@ source = ~/.config/omarchy/current/theme/hyprland.conf
 env = GDK_SCALE,2 # Change to 1 if on a 1x display
 
 # Extra bindings
-bind = SUPER, A, exec, $webapp="https://chatgpt.com"
-bind = SUPER SHIFT, A, exec, $webapp="https://grok.com"
-bind = SUPER, C, exec, $webapp="https://app.hey.com/calendar/weeks/"
-bind = SUPER, E, exec, $webapp="https://app.hey.com"
-bind = SUPER, Y, exec, $webapp="https://youtube.com/"
 bind = SUPER SHIFT, G, exec, $webapp="https://web.whatsapp.com/"
 bind = SUPER ALT, G, exec, $webapp="https://messages.google.com/web/conversations"
-bind = SUPER, X, exec, $webapp="https://x.com/"
-bind = SUPER SHIFT, X, exec, $webapp="https://x.com/compose/post"
 
 # Control your input devices
 # See https://wiki.hypr.land/Configuring/Variables/#input
