--- a/config/hypr/monitors.conf
+++ b/config/hypr/monitors.conf
@@ -1,8 +1,10 @@
 # See https://wiki.hyprland.org/Configuring/Monitors/
 
 # Use single default monitor (see all monitors with: hyprctl monitors)
-monitor=,preferred,auto,auto
+#monitor=,preferred,auto,auto
 
 # Example for Framework 13 w/ 6K XDR Apple display
 # monitor = DP-5, 6016x3384@60.00, auto, 2
 # monitor = eDP-1, 2880x1920@120.00, auto, 2
+monitor = DP-1, highres, auto-center-left, 1, transform, 1
+monitor = DP-2, highres, auto, 1.066667
