--- a/default/hypr/input.conf
+++ b/default/hypr/input.conf
@@ -1,7 +1,7 @@
 # https://wiki.hyprland.org/Configuring/Variables/#input
 input {
     kb_layout = us
-    kb_variant =
+    kb_variant = intl
     kb_model =
     kb_options = compose:caps
     kb_rules =
