--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -1,17 +1,17 @@
 # Start default apps
 bind = SUPER, return, exec, $terminal
 bind = SUPER, F, exec, $fileManager
-bind = SUPER, B, exec, $browser
+#bind = SUPER, B, exec, $browser
 bind = SUPER, M, exec, $music
 bind = SUPER, N, exec, $terminal -e nvim
 bind = SUPER, T, exec, $terminal -e btop
 bind = SUPER, G, exec, $messenger
 
-bind = SUPER, space, exec, pkill wofi || wofi --show drun --sort-order=alphabetical
+bind = SUPER, D, exec, pkill wofi || wofi --show drun --sort-order=alphabetical
 bind = SUPER SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
 bind = SUPER CTRL, SPACE, exec, ~/.local/share/omarchy/bin/swaybg-next
 bind = SUPER SHIFT CTRL, SPACE, exec, ~/.local/share/omarchy/bin/omarchy-theme-next
-bind = SUPER, K, exec, ~/.local/share/omarchy/bin/omarchy-show-keybindings
+bind = SUPER, ?, exec, ~/.local/share/omarchy/bin/omarchy-show-keybindings
 
 # Notifications
 bind = SUPER, comma, exec, makoctl dismiss
@@ -28,15 +28,15 @@ bind = SUPER CTRL, ESCAPE, exec, reboot
 bind = SUPER SHIFT CTRL, ESCAPE, exec, systemctl poweroff
 
 # Control tiling
-bind = SUPER, J, togglesplit, # dwindle
+bind = SUPER, B, togglesplit, # dwindle
 bind = SUPER, P, pseudo, # dwindle
 bind = SUPER, V, togglefloating,
 
 # Move focus with mainMod + arrow keys
-bind = SUPER, left, movefocus, l
-bind = SUPER, right, movefocus, r
-bind = SUPER, up, movefocus, u
-bind = SUPER, down, movefocus, d
+bind = SUPER, H, movefocus, l
+bind = SUPER, L, movefocus, r
+bind = SUPER, K, movefocus, u
+bind = SUPER, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
 bind = SUPER, code:10, workspace, 1
@@ -63,10 +63,10 @@ bind = SUPER SHIFT, code:18, movetoworkspace, 9
 bind = SUPER SHIFT, code:19, movetoworkspace, 10
 
 # Swap active window with the one next to it with mainMod + SHIFT + arrow keys
-bind = SUPER SHIFT, left, swapwindow, l
-bind = SUPER SHIFT, right, swapwindow, r
-bind = SUPER SHIFT, up, swapwindow, u
-bind = SUPER SHIFT, down, swapwindow, d
+bind = SUPER SHIFT, H, swapwindow, l
+bind = SUPER SHIFT, L, swapwindow, r
+bind = SUPER SHIFT, K, swapwindow, u
+bind = SUPER SHIFT, J, swapwindow, d
 
 # Resize active window
 bind = SUPER, minus, resizeactive, -100 0
@@ -97,7 +97,7 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 # Screenshots
-bind = , PRINT, exec, hyprshot -m region
+bind = SUPER, S, exec, hyprshot -m region
 bind = SHIFT, PRINT, exec, hyprshot -m window
 bind = CTRL, PRINT, exec, hyprshot -m output
 
