--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -11,7 +11,7 @@ bind = SUPER, D, exec, pkill wofi || wofi --show drun --sort-order=alphabetical
 bind = SUPER SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
 bind = SUPER CTRL, SPACE, exec, ~/.local/share/omarchy/bin/swaybg-next
 bind = SUPER SHIFT CTRL, SPACE, exec, ~/.local/share/omarchy/bin/omarchy-theme-next
-bind = SUPER, ?, exec, ~/.local/share/omarchy/bin/omarchy-show-keybindings
+bind = SUPER, C, exec, ~/.local/share/omarchy/bin/omarchy-show-keybindings
 
 # Notifications
 bind = SUPER, comma, exec, makoctl dismiss
@@ -21,11 +21,11 @@ bind = SUPER CTRL, comma, exec, makoctl mode -t do-not-disturb && makoctl mode |
 bind = SUPER, W, killactive,
 
 # End active session
-bind = SUPER, ESCAPE, exec, hyprlock
-bind = SUPER SHIFT, ESCAPE, exec, systemctl suspend
-bind = SUPER ALT, ESCAPE, exit,
-bind = SUPER CTRL, ESCAPE, exec, reboot
-bind = SUPER SHIFT CTRL, ESCAPE, exec, systemctl poweroff
+# bind = SUPER, ESCAPE, exec, hyprlock
+# bind = SUPER SHIFT, ESCAPE, exec, systemctl suspend
+# bind = SUPER ALT, ESCAPE, exit,
+# bind = SUPER CTRL, ESCAPE, exec, reboot
+# bind = SUPER SHIFT CTRL, ESCAPE, exec, systemctl poweroff
 
 # Control tiling
 bind = SUPER, B, togglesplit, # dwindle
@@ -39,6 +39,8 @@ bind = SUPER, K, movefocus, u
 bind = SUPER, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
+bind = SUPER, ESCAPE, workspace, 11
+bind = SUPER, TAB, workspace, 12
 bind = SUPER, code:10, workspace, 1
 bind = SUPER, code:11, workspace, 2
 bind = SUPER, code:12, workspace, 3
@@ -51,6 +53,8 @@ bind = SUPER, code:18, workspace, 9
 bind = SUPER, code:19, workspace, 10
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
+bind = SUPER SHIFT, ESCAPE, movetoworkspace, 11
+bind = SUPER SHIFT, TAB, movetoworkspace, 12
 bind = SUPER SHIFT, code:10, movetoworkspace, 1
 bind = SUPER SHIFT, code:11, movetoworkspace, 2
 bind = SUPER SHIFT, code:12, movetoworkspace, 3
