--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -19,6 +19,7 @@ source = ~/.local/share/omarchy/default/hypr/envs.conf
 source = ~/.local/share/omarchy/default/hypr/looknfeel.conf
 source = ~/.local/share/omarchy/default/hypr/input.conf
 source = ~/.local/share/omarchy/default/hypr/windows.conf
+source = ~/.local/share/omarchy/default/hypr/workspaces.conf
 source = ~/.config/omarchy/current/theme/hyprland.conf
 
 # Extra autostart processes (uncomment to run Dropbox)
