update killing window binding

--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -18,7 +18,7 @@ bind = SUPER, comma, exec, makoctl dismiss
 bind = SUPER SHIFT, comma, exec, makoctl dismiss --all
 bind = SUPER CTRL, comma, exec, makoctl mode -t do-not-disturb && makoctl mode | grep -q 'do-not-disturb' && notify-send "Silenced notifications" || notify-send "Enabled notifications"
 
-bind = SUPER, W, killactive,
+bind = SUPER SHIFT, Q, killactive,
 
 # End active session
 # bind = SUPER, ESCAPE, exec, hyprlock
