add fullscreen binding

--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -31,6 +31,7 @@ bind = SUPER SHIFT, Q, killactive,
 bind = SUPER, B, togglesplit, # dwindle
 bind = SUPER, P, pseudo, # dwindle
 bind = SUPER, V, togglefloating,
+bind = SUPER, F, fullscreen
 
 # Move focus with mainMod + arrow keys
 bind = SUPER, H, movefocus, l
