remove filemanager binding

--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -1,6 +1,6 @@
 # Start default apps
 bind = SUPER, return, exec, $terminal
-bind = SUPER, F, exec, $fileManager
+#bind = SUPER, F, exec, $fileManager
 #bind = SUPER, B, exec, $browser
 bind = SUPER, M, exec, $music
 bind = SUPER, N, exec, $terminal -e nvim
