--- a/default/hypr/windows.conf
+++ b/default/hypr/windows.conf
@@ -13,7 +13,7 @@ windowrule = fullscreen, class:^(com.libretro.RetroArch)$
 
 # Just dash of opacity
 windowrule = opacity 0.97 0.9, class:.*
-windowrule = opacity 1 0.97, class:^(Chromium|chromium|google-chrome|google-chrome-unstable)$
+windowrule = opacity 1 0.97, class:^(Chromium|chromium|google-chrome|google-chrome-unstable|firefox)$
 windowrule = opacity 1 1, initialTitle:^(youtube.com_/)$ # Youtube
 windowrule = opacity 1 1, class:^(zoom|vlc|mpv|org.kde.kdenlive|com.obsproject.Studio|com.github.PintaProject.Pinta|imv)$
 windowrule = opacity 1 1, class:^(com.libretro.RetroArch|steam)$
