update waybar icons

--- a/config/waybar/config
+++ b/config/waybar/config
@@ -20,21 +20,10 @@
     ],
     "hyprland/workspaces": {
       "on-click": "activate",
-      "format": "{icon}",
+      "format": "{name}{icon}",
       "format-icons": {
-        "12": "12",
-        "11": "11",
-        "1": "1",
-        "2": "2",
-        "3": "3",
-        "4": "4",
-        "5": "5",
-        "6": "6",
-        "7": "7",
-        "8": "8",
-        "9": "9",
-        "10": "10",
-        "active": "󱓻"
+         "active": ""
+         "default": ""
       }
     },
     "cpu": {
@@ -104,8 +93,8 @@
       "tooltip": false
     },
     "tray": {
-    	"icon-size": 15,
-    	"spacing": 10,
+    	"icon-size": 12,
+    	"spacing": 10
     }
 
 }
