--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -52,6 +52,7 @@ bind = SUPER, code:16, workspace, 7
 bind = SUPER, code:17, workspace, 8
 bind = SUPER, code:18, workspace, 9
 bind = SUPER, code:19, workspace, 10
+bind = SUPER, -, workspace, 13
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
 bind = SUPER SHIFT, ESCAPE, movetoworkspace, 11
@@ -66,6 +67,7 @@ bind = SUPER SHIFT, code:16, movetoworkspace, 7
 bind = SUPER SHIFT, code:17, movetoworkspace, 8
 bind = SUPER SHIFT, code:18, movetoworkspace, 9
 bind = SUPER SHIFT, code:19, movetoworkspace, 10
+bind = SUPER SHIFT, -, movetoworkspace, 13
 
 # Swap active window with the one next to it with mainMod + SHIFT + arrow keys
 bind = SUPER SHIFT, H, swapwindow, l
