--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -40,8 +40,6 @@ bind = SUPER, K, movefocus, u
 bind = SUPER, J, movefocus, d
 
 # Switch workspaces with mainMod + [0-9]
-bind = SUPER, ESCAPE, workspace, 11
-bind = SUPER, TAB, workspace, 12
 bind = SUPER, code:10, workspace, 1
 bind = SUPER, code:11, workspace, 2
 bind = SUPER, code:12, workspace, 3
@@ -52,11 +50,11 @@ bind = SUPER, code:16, workspace, 7
 bind = SUPER, code:17, workspace, 8
 bind = SUPER, code:18, workspace, 9
 bind = SUPER, code:19, workspace, 10
-bind = SUPER, -, workspace, 13
+bind = SUPER, ESCAPE, workspace, 11
+bind = SUPER, TAB, workspace, 12
+bind = SUPER, backslash, workspace, 13
 
 # Move active window to a workspace with mainMod + SHIFT + [0-9]
-bind = SUPER SHIFT, ESCAPE, movetoworkspace, 11
-bind = SUPER SHIFT, TAB, movetoworkspace, 12
 bind = SUPER SHIFT, code:10, movetoworkspace, 1
 bind = SUPER SHIFT, code:11, movetoworkspace, 2
 bind = SUPER SHIFT, code:12, movetoworkspace, 3
@@ -67,7 +65,9 @@ bind = SUPER SHIFT, code:16, movetoworkspace, 7
 bind = SUPER SHIFT, code:17, movetoworkspace, 8
 bind = SUPER SHIFT, code:18, movetoworkspace, 9
 bind = SUPER SHIFT, code:19, movetoworkspace, 10
-bind = SUPER SHIFT, -, movetoworkspace, 13
+bind = SUPER SHIFT, ESCAPE, movetoworkspace, 11
+bind = SUPER SHIFT, TAB, movetoworkspace, 12
+bind = SUPER SHIFT, backslash, movetoworkspace, 13
 
 # Swap active window with the one next to it with mainMod + SHIFT + arrow keys
 bind = SUPER SHIFT, H, swapwindow, l
