--- a/config/waybar/config
+++ b/config/waybar/config
@@ -30,7 +30,7 @@
       "on-click": "alacritty -e btop"
     },
     "clock": {
-      "format": "{:%A :%d %H:%M}",
+      "format": "{:%A %d %H:%M}",
       "tooltip": "true",
       "tooltip-format": "<tt><small>{calendar}</small></tt>",
       "calendar": {
