switch to ghostty

--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -4,7 +4,7 @@
 source = ~/.config/hypr/monitors.conf
 
 # Default applications
-$terminal = alacritty
+$terminal = ghostty
 $fileManager = nautilus --new-window
 $browser = firefox
 $music = spotify
@@ -59,4 +59,4 @@ input {
 }
 
 # Scroll faster in the terminal
-windowrule = scrolltouchpad 1.5, class:Alacritty
+windowrule = scrolltouchpad 1.5, class:Ghostty
