--- a/default/hypr/workspaces.conf
+++ b/default/hypr/workspaces.conf
@@ -1,13 +1,13 @@
-workspace = 1,monitor:DP-2
-workspace = 2,monitor:DP-2
-workspace = 3,monitor:DP-2
-workspace = 3,monitor:DP-2
-workspace = 4,monitor:DP-2
-workspace = 5,monitor:DP-2
-workspace = 6,monitor:DP-2
-workspace = 7,monitor:DP-2
-workspace = 8,monitor:DP-2
-workspace = 9,monitor:DP-2
-workspace = 10,monitor:DP-2
-workspace = 11,monitor:DP-1
-workspace = 12,monitor:DP-1
+workspace = 1,monitor:DP-1
+workspace = 2,monitor:DP-1
+workspace = 3,monitor:DP-1
+workspace = 3,monitor:DP-1
+workspace = 4,monitor:DP-1
+workspace = 5,monitor:DP-1
+workspace = 6,monitor:DP-1
+workspace = 7,monitor:DP-1
+workspace = 8,monitor:DP-1
+workspace = 9,monitor:DP-1
+workspace = 10,monitor:DVI-D-1
+workspace = 11,monitor:DVI-D-1
+workspace = 12,monitor:HDMI-A-1
