--- a/default/hypr/workspaces.conf
+++ b/default/hypr/workspaces.conf
@@ -8,6 +8,7 @@ workspace = 6,monitor:DP-1
 workspace = 7,monitor:DP-1
 workspace = 8,monitor:DP-1
 workspace = 9,monitor:DP-1
-workspace = 10,monitor:DVI-D-1
+workspace = 10,monitor:DP-1
 workspace = 11,monitor:DVI-D-1
-workspace = 12,monitor:HDMI-A-1
+workspace = 12,monitor:DVI-D-1
+workspace = 13,monitor:HDMI-A-1
