--- a/themes/gruvbox/mako.ini
+++ b/themes/gruvbox/mako.ini
@@ -6,12 +6,12 @@ height=110
 padding=10
 border-size=2
 font=Liberation Sans 11
-anchor=top-right
+anchor=top-center
 default-timeout=5000
 max-icon-size=32
 
-[app-name=Spotify]
-invisible=1
+
+
 
 [mode=do-not-disturb]
 invisible=true
