--- a/themes/nord/mako.ini
+++ b/themes/nord/mako.ini
@@ -9,9 +9,7 @@ font=Liberation Sans 11
 anchor=top-center
 default-timeout=5000
 max-icon-size=32
-
-
-
+layer=overlay
 
 [mode=do-not-disturb]
 invisible=true
