--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -7,9 +7,9 @@ source = ~/.config/hypr/monitors.conf
 $terminal = ghostty
 $fileManager = nautilus --new-window
 $browser = firefox
-$music = spotify
+$music = deezer
 #$passwordManager = 
-$messenger = telegram-desktop
+$messenger = signal-desktop
 $webapp = $browser --app
 
 # Use defaults Omarchy defaults
