--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -1,10 +1,10 @@
 # Start default apps
-bind = SUPER, return, exec, $terminal
+bind = SUPER, T, exec, $terminal
 #bind = SUPER, F, exec, $fileManager
 #bind = SUPER, B, exec, $browser
 bind = SUPER, M, exec, $music
 bind = SUPER, N, exec, $terminal -e nvim
-bind = SUPER, T, exec, $terminal -e btop
+#bind = SUPER, T, exec, $terminal -e btop
 bind = SUPER, G, exec, $messenger
 
 bind = SUPER, D, exec, pkill wofi || wofi --show drun --sort-order=alphabetical
