--- a/default/hypr/bindings.conf
+++ b/default/hypr/bindings.conf
@@ -5,7 +5,7 @@ bind = SUPER, T, exec, $terminal
 bind = SUPER, M, exec, $music
 bind = SUPER, N, exec, $terminal -e nvim
 #bind = SUPER, T, exec, $terminal -e btop
-bind = SUPER, G, exec, $messenger
+bind = SUPER, I, exec, $messenger
 
 bind = SUPER, D, exec, pkill wofi || wofi --show drun --sort-order=alphabetical
 bind = SUPER SHIFT, SPACE, exec, pkill -SIGUSR1 waybar
