update nord theme

--- a/themes/nord/hyprland.conf
+++ b/themes/nord/hyprland.conf
@@ -1,4 +1,5 @@
 general {
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgb(D8DEE9)
+    col.active_border = rgb(4c566a)
+    col.inactive_border = rgb(2e3440)
 }
